added edit option to todo

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
-.custom{
+.custom {
     margin-left: 20%;
+}
+
+input:focus {
+    outline: none;
 }
